lab1/Test/L1-A-5-45.output
Error Type B at Line 1
Error Type B at Line 13
Error Type B at Line 33
Error Type A at Line 39
Error Type B at Line 40
Error Type B at Line 46
Error Type A at Line 46
